--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     const errorMessage = document.getElementById('error-message');
     
     // Definimos el correo y la contraseña válidos
-    const validEmail = "usuario@ejemplo.com";
-    const validPassword = "contrasena123";
+    const validEmail = "1909rso@gmail.com";
+    const validPassword = "Lololo@1";
 
     form.addEventListener('submit', function(event) {
       event.preventDefault();
