--- a/calendario.html
+++ b/calendario.html
@@ -4,26 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calendario</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet">
+  <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css' rel='stylesheet' />
+  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js'></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+    }
+    #calendar {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
+  <div id='calendar'></div>
 
-  <header>
-    <nav>
-      <ul>
-        <li><a href="apartados.html">Apartados</a></li>
-        <li><a href="calendario.html">Calendario</a></li>
-      </ul>
-    </nav>
-  </header>
+  <script>
+    // Guardar eventos localmente usando localStorage
+    function guardarEventoLocal(event) {
+      let eventos = JSON.parse(localStorage.getItem('eventos')) || [];
+      eventos.push(event);
+      localStorage.setItem('eventos', JSON.stringify(eventos));
+    }
 
-  <main>
-    <h1>Calendario</h1>
-    <div id="calendar"></div>
-  </main>
+    // Cargar eventos desde localStorage
+    function cargarEventosDesdeLocal() {
+      return JSON.parse(localStorage.getItem('eventos')) || [];
+    }
 
-  <script src="script.js"></script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const calendarEl = document.getElementById('calendar');
+      const calendar = new FullCalendar.Calendar(calendarEl, {
+        initialView: 'dayGridMonth',
+        editable: true,
+        selectable: true,
+        events: cargarEventosDesdeLocal(),
+
+        dateClick: function (info) {
+          let eventTitle = prompt('Ingrese el título del evento:');
+          if (eventTitle) {
+            let newEvent = {
+              title: eventTitle,
+              start: info.dateStr,
+              allDay: true
+            };
+            calendar.addEvent(newEvent);
+            guardarEventoLocal(newEvent);
+          }
+        }
+      });
+
+      calendar.render();
+    });
+  </script>
 </body>
 </html>
